@@ -1,3 +1,7 @@
+2018-11-08  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* g++.dg/other/pr87916.C: New test.
+
 2018-11-08  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/87929
